tests/neg/i7359-c.scala
trait SAMTrait where
  def first(): String
  def wait(): Unit // error
